Completed multiple pages of documentation - Project Managment - Testing Types - Automation Frameworks
Only the resume documentation remains.

Signed-off-by: H1ddenGames <skarim3000@gmail.com>